  installation
* (bug 9383) Don't set a default value for BLOB column in rc-deleted
  database patch
* (bug 10149) Don't show full template list on section-0 edit
* Fix maintenance/importImages.php so it doesn't barf PHP errors when no suitable
  files are found, and make the list of extensions an option (defaults to
  $wgFileExtensions)

== MediaWiki API changes since 1.10 ==

(For ongoing development discussion, see http://www.mediawiki.org/wiki/API)

* New properties: links, templates, images, langlinks, categories, external links
* Breaking Change: imagelinks renamed into imageusage (il->iu)
* Bug fix: incorrect generator behavior in some cases
* JSON format allows an optional callback function to wrap the result.
* Login module disabled until a more secure solution can be implemented
* (bug 9938) Querying by revision identifier returns the most recent revision
  for the corresponding page, rather than the requested revision
* (bug 8772) Filter page revision queries by user
* (bug 9927) User contributions queries do not accept IP addresses
* Watchlist feed now reports a proper feed item when the user is not logged in
* Watchlist feed date bug fixed - automatically shows one last day
* Watchlist feed now allows to specify number of hours to monitor
* list=allpages now returns a list instead of a map in json format
* Breaking Change: in json, revisions are now returned as a list, not as a map.
* Add: prop=info can show page is new flag, current page length, and visit counter.
* Change: Query watchlist now shows flags only when explicitly requested with wlparam=flags
          rc_this_oldid (textid) is no longer accessible from query watchlist
* action=usercontribs: additional filtering by ucshow=; selection of needed fields with ucprop=;
  the textid (rev_text_id) is no longer being exposed
* breaking change: backlinks, embeddedin & imageusage now return lists in json instead of a map,